[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/book.png" type="Texture" id=1]
[ext_resource path="res://sounds/book_slide.ogg" type="AudioStream" id=2]
[ext_resource path="res://sounds/book_pageflip_1.ogg" type="AudioStream" id=3]
[ext_resource path="res://menu/Story.gd" type="Script" id=4]
[ext_resource path="res://sprites/book_flare.png" type="Texture" id=5]
[ext_resource path="res://sprites/players_silhouette.png" type="Texture" id=6]
[ext_resource path="res://sprites/book_title.png" type="Texture" id=7]
[ext_resource path="res://objects/system/label/CustomLabel.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("Book:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 512, 1500 ), Vector2( 512, 300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Book/Closed:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3, 3.1, 3.5 ),
"transitions": PoolRealArray( 1, 1e-05, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Book/Closed:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Book/Opened:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Book/Opened:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3.1, 3.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("SlideAudio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("PageflipAudio")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Book/Closed:position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.8, 3 ),
"transitions": PoolRealArray( 1e-05, 1.89465, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 176, 0 ) ]
}
tracks/8/type = "method"
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "startStory"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "flipback"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Book/Opened/BookLeftSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1e-05, 1 ),
"update": 0,
"values": [ Vector2( 16, 16 ), Vector2( 16, 18 ), Vector2( 16, 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Book/Opened/BookRightSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1e+06, 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 16 ), Vector2( 16, 18 ), Vector2( 16, 16 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "updateImages"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "flipnext"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Book/Opened/BookLeftSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1e+06, 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 16 ), Vector2( 16, 18 ), Vector2( 16, 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Book/Opened/BookRightSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1e-05, 1 ),
"update": 0,
"values": [ Vector2( 16, 16 ), Vector2( 16, 18 ), Vector2( 16, 16 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "updateImages"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "startgame"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Dim:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "startGame"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StartLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StartLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 512 ), Vector2( 128, 512 ) ]
}

[node name="Story" type="Node2D"]
script = ExtResource( 4 )

[node name="FlipTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StoryAnim" type="AnimationPlayer" parent="."]
autoplay = "appear"
anims/appear = SubResource( 1 )
anims/flipback = SubResource( 3 )
anims/flipnext = SubResource( 2 )

[node name="StartAnim" type="AnimationPlayer" parent="."]
anims/startgame = SubResource( 4 )

[node name="StartLabel" parent="." instance=ExtResource( 8 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 32, 512 )
fontSize = 3
outline = true
animate = false

[node name="Book" type="Node2D" parent="."]
position = Vector2( 512, 1500 )

[node name="Sprite" type="Sprite" parent="Book"]
scale = Vector2( 16, 16 )
texture = ExtResource( 5 )

[node name="Closed" type="Node2D" parent="Book"]

[node name="BookSprite" type="Sprite" parent="Book/Closed"]
scale = Vector2( 16, 16 )
texture = ExtResource( 1 )
hframes = 2

[node name="Title" type="Sprite" parent="Book/Closed"]
modulate = Color( 1, 1, 1, 0.627451 )
position = Vector2( 0, -80 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Owl" type="Sprite" parent="Book/Closed"]
modulate = Color( 1, 1, 1, 0.501961 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
offset = Vector2( -24, 12 )
hframes = 4

[node name="Hedgehog" type="Sprite" parent="Book/Closed"]
modulate = Color( 1, 1, 1, 0.501961 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
offset = Vector2( -9, 24 )
hframes = 4
frame = 1

[node name="Bunny" type="Sprite" parent="Book/Closed"]
modulate = Color( 1, 1, 1, 0.501961 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
offset = Vector2( 24, 12 )
hframes = 4
frame = 3

[node name="Squirrel" type="Sprite" parent="Book/Closed"]
modulate = Color( 1, 1, 1, 0.501961 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
offset = Vector2( 9, 24 )
hframes = 4
frame = 2

[node name="Opened" type="Node2D" parent="Book"]
visible = false

[node name="BookLeftSprite" type="Sprite" parent="Book/Opened"]
position = Vector2( -176, 0 )
scale = Vector2( 16, 16 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="ChapterLabel" parent="Book/Opened/BookLeftSprite" instance=ExtResource( 8 )]
position = Vector2( -7, -11 )
scale = Vector2( 0.0625, 0.0625 )
fontSize = 4
color = Color( 0, 0, 0, 1 )
animate = false

[node name="StoryLeft" type="Sprite" parent="Book/Opened/BookLeftSprite"]
position = Vector2( 0.25, 0 )
scale = Vector2( 0.125, 0.125 )

[node name="BookRightSprite" type="Sprite" parent="Book/Opened"]
position = Vector2( 176, 0 )
scale = Vector2( 16, 16 )
texture = ExtResource( 1 )
flip_h = true
hframes = 2
frame = 1

[node name="StoryRight" type="Sprite" parent="Book/Opened/BookRightSprite"]
position = Vector2( -0.25, 0 )
scale = Vector2( 0.125, 0.125 )

[node name="Dim" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0 )

[node name="SlideAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="PageflipAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="FlipTimer" to="." method="_on_FlipTimer_timeout"]
